components/serve/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: model-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /invocations
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: model
            port:
              number: 80
        path: /model
        pathType: Prefix
status:
  loadBalancer: {}
